DON'T MERGE: slapos-sr-testing: only test powerdns in Py3

--- a/software/slapos-sr-testing/software-py3.cfg
+++ b/software/slapos-sr-testing/software-py3.cfg
@@ -11,6 +11,7 @@ eggs -=
   ${slapos.test.plantuml-setup:egg}
 
 [template]
+tests =
+  ${:extra}
 extra =
-  ${slapos.test.monitor-setup:setup}
   ${slapos.test.powerdns-setup:setup}
