wip: version up: powerdns 4.2.1
Note: Only boost>=1.35 and openssl are required to build powerdns from
source; ragel, bison and flex are also required if building from git.
See https://doc.powerdns.com/authoritative/appendices/compiling.html#dependencies

--- a/component/powerdns/buildout.cfg
+++ b/component/powerdns/buildout.cfg
@@ -2,33 +2,41 @@
 extends =
   ../autoconf/buildout.cfg
   ../automake/buildout.cfg
-  ../bison/buildout.cfg
-  ../flex/buildout.cfg
-  ../git/buildout.cfg
   ../boost-lib/buildout.cfg
   ../libtool/buildout.cfg
   ../make/buildout.cfg
-  ../mariadb/buildout.cfg
+  ../openssl/buildout.cfg
   ../pkgconfig/buildout.cfg
-  ../ragel/buildout.cfg
   ../zlib/buildout.cfg
+
+# For geoip backend
+# https://doc.powerdns.com/authoritative/backends/geoip.html
+  ../yaml-cpp/buildout.cfg
 
 parts =
   powerdns
 
 [powerdns]
 recipe = slapos.recipe.cmmi
-url = http://downloads.powerdns.com/releases/pdns-3.3.1.tar.gz
-md5sum = 074e2ff211fd12ecad25b5c1cc190dd4
+url = http://downloads.powerdns.com/releases/pdns-4.2.1.tar.bz2
+md5sum = b5f3998a3bc438b905c72c0473408839
 configure-options =
   --prefix=${buildout:parts-directory}/${:_buildout_section_name_}
   --with-boost=${boost-lib:location}
-  --with-modules="geo"
+  --with-libcrypto=${openssl:location}
+  --with-modules="geoip"
   --with-dynmodules=""
   --without-lua
+  --disable-lua-records
+pkg_config_depends = ${yaml-cpp:location}/lib/pkgconfig
 environment =
-  PATH=${make:location}/bin:${libtool:location}/bin:${pkgconfig:location}/bin:${bison:location}/bin:${flex:location}/bin:${git:location}/bin:${ragel:location}/bin:%(PATH)s
-  LDFLAGS=-L${boost-lib:location}/lib -Wl,-rpath=${boost-lib:location}/lib -L${zlib:location}/lib -Wl,-rpath -Wl,${zlib:location}/lib -lz
-  CPPFLAGS=-I${boost-lib:location}/include
+  PATH=${autoconf:location}/bin:${automake:location}/bin:${libtool:location}/bin:${make:location}/bin:${pkgconfig:location}/bin:%(PATH)s
+  LDFLAGS=-L${boost-lib:location}/lib -Wl,-rpath=${boost-lib:location}/lib -L${openssl:location}/lib -Wl,-rpath=${openssl:location}/lib -L${yaml-cpp:location}/lib -Wl,-rpath=${yaml-cpp:location}/lib -L${zlib:location}/lib -Wl,-rpath=${zlib:location}/lib
+  CPPFLAGS=-I${boost-lib:location}/include -I${yaml-cpp:location}/include
+  PKG_CONFIG_PATH=${:pkg_config_depends}
+# XXX: Override the default value "-Llib -lyaml-cpp"; "-Llib" is a problem
+  YAML_LIBS = -lyaml-cpp
+make-options =
+  LIBTOOL=libtool
 make-target =
   install
