wip: powerdns: use GeoLite2-Country.mmdb as database

--- a/component/powerdns/buildout.cfg
+++ b/component/powerdns/buildout.cfg
@@ -11,6 +11,7 @@ extends =
 
 # For geoip backend
 # https://doc.powerdns.com/authoritative/backends/geoip.html
+  ../geoip2/buildout.cfg
   ../yaml-cpp/buildout.cfg
 
 parts =
@@ -30,9 +31,9 @@ configure-options =
   --disable-lua-records
 pkg_config_depends = ${yaml-cpp:location}/lib/pkgconfig
 environment =
-  PATH=${autoconf:location}/bin:${automake:location}/bin:${libtool:location}/bin:${make:location}/bin:${pkgconfig:location}/bin:%(PATH)s
-  LDFLAGS=-L${boost-lib:location}/lib -Wl,-rpath=${boost-lib:location}/lib -L${openssl:location}/lib -Wl,-rpath=${openssl:location}/lib -L${yaml-cpp:location}/lib -Wl,-rpath=${yaml-cpp:location}/lib -L${zlib:location}/lib -Wl,-rpath=${zlib:location}/lib
-  CPPFLAGS=-I${boost-lib:location}/include -I${yaml-cpp:location}/include
+  PATH=${autoconf:location}/bin:${automake:location}/bin:${libmaxminddb:location}/bin:${libtool:location}/bin:${make:location}/bin:${pkgconfig:location}/bin:%(PATH)s
+  LDFLAGS=-L${boost-lib:location}/lib -Wl,-rpath=${boost-lib:location}/lib -L${libmaxminddb:location}/lib -Wl,-rpath=${libmaxminddb:location}/lib -L${openssl:location}/lib -Wl,-rpath=${openssl:location}/lib -L${yaml-cpp:location}/lib -Wl,-rpath=${yaml-cpp:location}/lib -L${zlib:location}/lib -Wl,-rpath=${zlib:location}/lib
+  CPPFLAGS=-I${boost-lib:location}/include -I${libmaxminddb:location}/include -I${yaml-cpp:location}/include
   PKG_CONFIG_PATH=${:pkg_config_depends}
 # XXX: Override the default value "-Llib -lyaml-cpp"; "-Llib" is a problem
   YAML_LIBS = -lyaml-cpp
