--- a/software/powerdns/instance-powerdns.cfg
+++ b/software/powerdns/instance-powerdns.cfg
@@ -65,6 +65,7 @@ webserver-port = 8088
 [geo]
 ip-map-zonefile = ${iso-list:target}
 geo-maps = $${pdns-directory:geo-maps}
+database = ${geolite2-country:location}/GeoLite2-Country.mmdb
 
 [pdns-directory]
 recipe = slapos.cookbook:mkdirectory
