--- a/stack/slapos.cfg
+++ b/stack/slapos.cfg
@@ -38,6 +38,7 @@ exec-sitecustomize = false
 
 # Add location for modified non-official slapos.buildout
 find-links +=
+  https://softinst74175.host.vifib.net/public/
   http://www.nexedi.org/static/packages/source/
   http://www.nexedi.org/static/packages/source/hexagonit.recipe.download/
   http://www.nexedi.org/static/packages/source/slapos.buildout/
@@ -45,6 +46,7 @@ find-links +=
 # Use only quite well working sites.
 allow-hosts +=
   pypi.org
+  softinst74175.host.vifib.net
   *.googlecode.com
   *.nexedi.org
   *.python.org
@@ -118,7 +120,7 @@ eggs =
 [versions]
 setuptools = 44.0.0
 # Use SlapOS patched zc.buildout
-zc.buildout = 2.7.1+slapos007
+zc.buildout = 2.7.1+slapos007.jm1
 # Use SlapOS patched zc.recipe.egg (zc.recipe.egg 2.x is for Buildout 2)
 zc.recipe.egg = 2.0.3+slapos003
 # Use own version of h.r.download to be able to open .xz and .lz archives
