--- a/software/powerdns/instance.cfg
+++ b/software/powerdns/instance.cfg
@@ -8,10 +8,12 @@ offline = true
 
 
 [switch-softwaretype]
-recipe = slapos.cookbook:softwaretype
-default = $${dynamic-powerdns-replicate:rendered}
-single-default = $${dynamic-template-powerdns:rendered}
+recipe = slapos.cookbook:switch-softwaretype
+default = dynamic-powerdns-replicate:rendered
+single-default = dynamic-template-powerdns:rendered
 
+# BBB
+RootSoftwareInstance = $${:default}
 
 [jinja2-template-base]
 recipe = slapos.recipe.template:jinja2
@@ -21,9 +23,9 @@ context =
     import json_module json
     key eggs_directory buildout:eggs-directory
     key develop_eggs_directory buildout:develop-eggs-directory
-    key slap_software_type slap-parameters:slap-software-type
-    key slapparameter_dict slap-parameters:configuration
-    key slave_instance_list slap-parameters:slave-instance-list
+    key slap_software_type slap-configuration:slap-software-type
+    key slapparameter_dict slap-configuration:configuration
+    key slave_instance_list slap-configuration:slave-instance-list
     $${:extra-context}
 
 [dynamic-template-powerdns]
@@ -45,7 +47,7 @@ extra-context =
     raw software_type RootSoftwareInstance-default
     raw template_monitor ${monitor2-template:rendered}
 
-[slap-parameters]
+[slap-configuration]
 recipe = slapos.cookbook:slapconfiguration
 computer = $${slap-connection:computer-id}
 partition = $${slap-connection:partition-id}
