--- a/component/userhosts/buildout.cfg
+++ b/component/userhosts/buildout.cfg
@@ -1,18 +1,8 @@
-[buildout]
-extends =
-  ../git/buildout.cfg
-
 [userhosts]
-recipe = plone.recipe.command
-stop-on-error = true
-update-command = ${:command}
-command = cd ${userhosts-get:location} && make
-# For convenience (one section to build & know result path)
-location = ${userhosts-get:location}/userhosts
-
-[userhosts-get]
-recipe = slapos.recipe.build:gitclone
-repository = https://lab.nexedi.com/nexedi/userhosts.git
+recipe = slapos.recipe.cmmi
+shared = true
+url = https://lab.nexedi.com/nexedi/userhosts/repository/${:revision}/archive.tar.gz
 revision = 1d3b463e7856db6e674a06258c0840206e6a7b72
-git-executable = ${git:location}/bin/git
-location = ${buildout:parts-directory}/userhosts
+configure-command = true
+make-options = PREFIX=@@LOCATION@@
+make-targets = check install
